grid útlit sett á <main> og eitthvað css tweak

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -22,6 +22,7 @@
 			<label for="category">Í hvaða flokki er varan:</label>
 			<input type="text" name="category">
 		</div>
+		<button>Skrá vöru</button>
 	</form>
 <% } %>
 <% %>
