--- a/public/styles.css
+++ b/public/styles.css
@@ -25,6 +25,9 @@ html {
 }
 main {
   display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 1em;
+  grid-auto-rows: minmax(100px, auto);
   margin: auto;
   max-width: 1400px;
 }
@@ -38,9 +41,15 @@ img {
   height: 100%;
 }
 
+button {
+  margin: auto;
+}
+
 .menuWrapper {
   display: flex;
   flex-direction: column;
+  grid-column: 1 / 13;
+  grid-row: 2;
 }
 
 .menuItemWrapper {
@@ -53,10 +62,13 @@ img {
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 3%;
+  grid-column: 2 / 13;
+  grid-row: 1;
 }
 
 .inputLabelWrapper {
   display: flex;
   flex-direction: column;
   padding: 1%;
+  min-width: 20%;
 }
